--- a/notebooks/price-test.ipynb
+++ b/notebooks/price-test.ipynb
@@ -1640,7 +1640,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.8.11 ('fre7773')",
    "language": "python",
    "name": "python3"
   },
@@ -1654,7 +1654,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.8.11"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "667a15cf0eca415c7f3afcc265622f1a9b30cc1897df766a6ba3416af631a0c1"
+   }
   }
  },
  "nbformat": 4,
